namespace DotsWebApi.Model;

public class MoveValidation
{
    public bool IsValid { get; set; }
    public string Message { get; set; } = string.Empty;
}